--- a/src/global.styl
+++ b/src/global.styl
@@ -244,7 +244,7 @@ $default-letter-spacing = $extend-letter-spacing-m
 
 $link-color = $primary
 $link-color-hover = $dark
-$link-transition = all .2s ease
+$link-transition = all .2s cubic-bezier(0,.9,.45,1)
 $link-decoration = none
 
 /*
@@ -297,11 +297,11 @@ $scale-l = 1.2
 |-----------------------------------------------------------------------------------------------------------------------
 */
 
-$transition-xs = .07s
-$transition-s = .12s
-$transition-m = .2s
-$transition-l = .4s
-$transition-xl = .8s
+$transition-xs = .1s
+$transition-s = .2s
+$transition-m = .4s
+$transition-l = .7s
+$transition-xl = 1.5s
 
 /*
 |-----------------------------------------------------------------------------------------------------------------------
@@ -456,7 +456,7 @@ $btn-corner-radius = 6px
 $btn-font-size = $font-size-s
 $btn-line-height = 1
 $btn-padding-h = 18px
-$btn-transition = all .3s ease
+$btn-transition = all .5s cubic-bezier(0,.9,.45,1)
 $btn-letter-spacing = $extend-letter-spacing-l
 $btn-text-transform = uppercase
 
