--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -1414,19 +1414,19 @@ for i in (1..12)
 |-----------------------------------------------------------------------------------------------------------------------
 */
 .tween-xs
-  transition ease all $transition-xs
+  transition cubic-bezier(0,.9,.45,1) all $transition-xs
 
 .tween-s
-  transition ease all $transition-s
+  transition cubic-bezier(0,.9,.45,1) all $transition-s
 
 .tween-m, .tween
-  transition ease all $transition-m
+  transition cubic-bezier(0,.9,.45,1) all $transition-m
 
 .tween-l
-  transition ease all $transition-l
+  transition cubic-bezier(0,.9,.45,1) all $transition-l
 
 .tween-xl
-  transition ease all $transition-xl
+  transition cubic-bezier(0,.9,.45,1) all $transition-xl
 
 /*
 |-----------------------------------------------------------------------------------------------------------------------
