--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -1,4 +1,6 @@
-$accentColor = #3eaf7c
-$textColor = #35495e
-$borderColor = #f2f5f3
-$codeBgColor = #35495e
+@import '~src/global.styl'
+
+$accentColor = $primary
+$textColor = $dark
+$borderColor = $light
+$codeBgColor = $dark
