Update to 0.6.1 - corrected typo - improved button color .light-bg

--- a/src/base.styl
+++ b/src/base.styl
@@ -742,9 +742,7 @@ select:disabled:hover
       color $dark-forced
       background $light
       &:hover
-        color $dark-forced
-        background white
-        border-color white
+        background $light-hover
       &:focus
         border-color $light-hover
   if $colors.black
