--- a/src/global.styl
+++ b/src/global.styl
@@ -64,10 +64,10 @@ $tertiary-hover = $dark-forced
 $dark-hover = $primary
 $muted-hover = $dark-forced
 $subtle-hover = $muted-forced
-$light-hover = darken($light-forced, 30%)
+$light-hover = $subtle-forced
 $white-hover = $light-forced
 $black-hover = $dark-forced
-$red-hover = darken($red, 30%)
+$red-hover = darken($red, 40%)
 $green-hover = darken($green, 30%)
 $yellow-hover = darken($yellow, 30%)
 $orange-hover = darken($orange, 30%)
