--- a/src/global.styl
+++ b/src/global.styl
@@ -257,7 +257,7 @@ $link-decoration = none
 $placeholder-color = $subtle
 
 // Inverted
-$placeholder-color = $subtle-inverted
+$placeholder-color-inverted = $subtle-inverted
 
 /* Blockquotes
 ----------------------------------------------------------------------------------------------------------------------*/
