--- a/src/global.styl
+++ b/src/global.styl
@@ -392,6 +392,7 @@ $size-3xl = 60px
 // Base button
 $btn-corner-radius = $rounded-m
 $btn-font-size = $font-size-s
+$btn-font-weight = $font-weight-regular
 $btn-line-height = 1
 $btn-padding-h = $size-l
 $btn-transition = all .5s cubic-bezier(0,.9,.45,1)
