--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -174,6 +174,7 @@ a
   if $colors.primary
     &.primary
       color $primary-inverted
+    &:hover,
     &.primary:hover
       color $primary-hover-inverted
   if $colors.secondary
