Update to 0.6.5 - fixed bug with positioning classes for .absolute

--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -643,14 +643,19 @@ if $colors.violet
 
 .fixed
   position fixed
-  &.top, .absolute.top
-    top 0
-  &.right, .absolute.right
-    right 0
-  &.bottom, .absolute.bottom
-    bottom 0
-  &.left, .absolute.left
-    left 0
+
+.fixed.top,
+.absolute.top
+  top 0
+.fixed.right,
+.absolute.right
+  right 0
+.fixed.bottom,
+.absolute.bottom
+  bottom 0
+.fixed.left,
+.absolute.left
+  left 0
 
 .no-overflow
   overflow hidden
